--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="jquery-ui-1.12.1/jquery-ui.css">  
     <link rel="stylesheet" type="text/css" href="css/bootstrap-float-label.css"/> 
     <link rel="stylesheet" type="text/css" href="css/index.css">                 
-    <script src="src/jquery-1.12.3.min.js"></script>  
+    <script src="src/jquery-1.11.2.js"></script>  
     <script src="jquery-ui-1.12.1/jquery-ui.js"></script>  
     <script type="text/javascript" src="src/background.js"></script>
 </head>  
